--- a/test/index.html
+++ b/test/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test: 3D Flight</title>
-  <script type="module" crossorigin src="/assets/main-pPWnk8jJ.js"></script>
+  <script type="module" crossorigin src="/assets/main-vH1Umx69.js"></script>
   <link rel="stylesheet" crossorigin href="/assets/main-DzfwoMi7.css">
 </head>
+
 <body>
     <div id="scroll-container" style="height: 500vh;"></div>
 </body>
+
 </html>
