--- a/test/index.html
+++ b/test/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test: 3D Flight</title>
-  <script type="module" crossorigin src="/assets/main-vH1Umx69.js"></script>
-  <link rel="stylesheet" crossorigin href="/assets/main-DzfwoMi7.css">
+  <script type="module" crossorigin src="/CodeUnity/assets/main-BhqAsiGh.js"></script>
+  <link rel="stylesheet" crossorigin href="/CodeUnity/assets/main-DzfwoMi7.css">
 </head>
 
 <body>
