Make a lines from 0 to 1

--- a/src/test/index.html
+++ b/src/test/index.html
@@ -10,6 +10,12 @@
 
 <body>
     <div id="scroll-container" style="height: 500vh;"></div>
+
+    <div class="navigation-arrows">
+        <div id="left-arrow" class="arrow">&larr;</div>
+        <div id="right-arrow" class="arrow">&rarr;</div>
+    </div>
+
     <script type="module" src="js/main.js"></script>
 </body>
 
