--- a/src/test/index.html
+++ b/src/test/index.html
@@ -25,6 +25,8 @@
         <div id="right-arrow" class="arrow">&rarr;</div>
     </div>
 
+    <div id="tooltip"></div>
+
     <script type="module" src="js/main.js"></script>
 </body>
 
