Make pop-ups for points

--- a/src/test/index.html
+++ b/src/test/index.html
@@ -27,6 +27,14 @@
 
     <div id="tooltip"></div>
 
+    <div id="info-popup-container" class="info-popup-container">
+        <div class="info-popup-content">
+            <h2 id="info-popup-title"></h2>
+            <p id="info-popup-content-text"></p>
+            <button id="info-popup-close">Close</button>
+        </div>
+    </div>
+
     <script type="module" src="js/main.js"></script>
 </body>
 
