--- a/src/test/index.html
+++ b/src/test/index.html
@@ -29,9 +29,15 @@
 
     <div id="info-popup-container" class="info-popup-container">
         <div class="info-popup-content">
-            <h2 id="info-popup-title"></h2>
-            <p id="info-popup-content-text"></p>
-            <button id="info-popup-close">Close</button>
+            <div class="info-popup-left">
+                <h2 id="info-popup-title"></h2>
+                <p id="info-popup-content-text"></p>
+                <ul id="info-popup-features"></ul>
+                <button id="info-popup-close">Close</button>
+            </div>
+            <div class="info-popup-right">
+                <img id="info-popup-image" src="" alt="Popup Image">
+            </div>
         </div>
     </div>
 
