--- a/src/test/index.html
+++ b/src/test/index.html
@@ -14,6 +14,7 @@
             <h1>Welcome to CodeUnity</h1>
             <hr>
             <p>Welcome, dear users, to our island! This project demonstrates the capabilities of Three.js and GSAP. You can freely move around the island, interact with objects, and explore its secrets. We hope you enjoy the journey! Discover hidden gems, unravel mysteries, and immerse yourself in a unique interactive experience. Our team has put a lot of effort into creating this captivating world for you to explore. Get ready for an unforgettable adventure!</p>
+            <div id="popup-preloader" class="preloader"></div>
             <button id="popup-button" disabled>Lets go</button>
         </div>
     </div>
