feat: implement virtual joystick for mobile navigation

--- a/src/test/index.html
+++ b/src/test/index.html
@@ -26,6 +26,12 @@
         <div id="right-arrow" class="arrow">&rarr;</div>
     </div>
 
+    <div id="joystick-zone">
+        <div class="joystick-base">
+            <div class="joystick-knob"></div>
+        </div>
+    </div>
+
     <div id="tooltip"></div>
 
     <div id="info-popup-container" class="info-popup-container">
