Add: Instruction pop-up after main po-up

--- a/src/test/index.html
+++ b/src/test/index.html
@@ -14,7 +14,11 @@
         <div id="popup">
             <h1>WELCOME TO CODEUNITY!</h1>
             <hr>
-            <p><strong>Welcome, dear users, to our island!</strong> This project demonstrates the capabilities of Three.js and GSAP. You can freely move around the island, interact with objects, and explore its secrets. We hope you enjoy the journey! Discover hidden gems, unravel mysteries, and immerse yourself in a unique interactive experience. Our team has put a lot of effort into creating this captivating world for you to explore. Get ready for an unforgettable adventure!</p>
+            <p><strong>Welcome, dear users, to our island!</strong> This project demonstrates the capabilities of
+                Three.js and GSAP. You can freely move around the island, interact with objects, and explore its
+                secrets. We hope you enjoy the journey! Discover hidden gems, unravel mysteries, and immerse yourself in
+                a unique interactive experience. Our team has put a lot of effort into creating this captivating world
+                for you to explore. Get ready for an unforgettable adventure!</p>
             <div id="popup-preloader" class="preloader"></div>
             <button id="popup-button" disabled>Lets go!</button>
         </div>
@@ -47,6 +51,13 @@
                 <img id="info-popup-image" src="" alt="Popup Image">
             </div>
         </div>
+    </div>
+
+    <div id="welcome-message-container">
+        <img src="textures/icon.png" alt="Info Icon" class="welcome-message-icon">
+        <p><strong>You are ready to explore!</strong> Scroll down to initiate your descent. After landing, use the on-screen arrow
+            buttons or your keyboard's arrow keys to navigate the island. Look around and explore our futuristic hubs by
+            moving the Mouse.</p>
     </div>
 
     <script type="module" src="js/main.js"></script>
