Change: Style for others pop-ups

--- a/src/test/index.html
+++ b/src/test/index.html
@@ -42,13 +42,19 @@
     <div id="info-popup-container" class="info-popup-container">
         <div class="info-popup-content">
             <div class="info-popup-left">
-                <h2 id="info-popup-title"></h2>
+                <div class="info-popup-header">
+                    <div class="info-popup-logo-container">
+                        <img id="info-popup-logo" src="" alt="Popup Logo">
+                    </div>
+                    <h2 id="info-popup-title"></h2>
+                </div>
+                <p id="info-popup-subtitle"></p>
                 <p id="info-popup-content-text"></p>
                 <ul id="info-popup-features"></ul>
                 <button id="info-popup-close">Close</button>
             </div>
             <div class="info-popup-right">
-                <img id="info-popup-image" src="" alt="Popup Image">
+                <img id="info-popup-scene-image" src="" alt="Scene Image">
             </div>
         </div>
     </div>
