--- a/src/test/index.html
+++ b/src/test/index.html
@@ -14,11 +14,11 @@
         <div id="popup">
             <h1>WELCOME TO CODEUNITY!</h1>
             <hr>
-            <p><strong>Welcome, dear users, to our island!</strong> This project demonstrates the capabilities of
-                Three.js and GSAP. You can freely move around the island, interact with objects, and explore its
-                secrets. We hope you enjoy the journey! Discover hidden gems, unravel mysteries, and immerse yourself in
-                a unique interactive experience. Our team has put a lot of effort into creating this captivating world
-                for you to explore. Get ready for an unforgettable adventure!</p>
+            <p><strong>Welcome, dear users, to our island!</strong> 
+                Step inside and explore how we merge design, technology, and imagination. 
+                Our team builds websites, mobile apps, 3D visualizations, 
+                and Shopify stores that don’t just look amazing - they deliver results, 
+                engage users, and bring your ideas to life.</p>
             <div id="popup-preloader" class="preloader"></div>
             <button id="popup-button" disabled>Lets go!</button>
         </div>
