--- a/src/test/index.html
+++ b/src/test/index.html
@@ -27,8 +27,8 @@
     <div id="scroll-container" style="height: 500vh;"></div>
 
     <div class="navigation-arrows">
-        <div id="left-arrow" class="arrow">&larr;</div>
-        <div id="right-arrow" class="arrow">&rarr;</div>
+        <div id="left-arrow" class="arrow">&lt;</div>
+        <div id="right-arrow" class="arrow">&gt;</div>
     </div>
 
     <div id="joystick-zone">
